--- a/css/app.css
+++ b/css/app.css
@@ -121,14 +121,24 @@ h1 {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  width: 100vw;
+  height: 100vh;
 }
 
-.congrats h1 {
+.congratsModal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.congratsModal h1 {
   color: #02ccba;
 }
 
-.congrats button {
+.congratsModal button {
   border-radius: 10px;
   background-color: #02b3e4;
   padding: 1em;
+  font-weight: bold;
 }
